--- a/crm_app/templates/crm/Leads/lead_load.html
+++ b/crm_app/templates/crm/Leads/lead_load.html
@@ -452,7 +452,25 @@
 
                         {% comment %} ------------------------- Inprocess --------------- {% endcomment %}
                         <div class="tab-pane" id="lead-inporcess" role="tabpanel">
-                            <div class="table-responsive table-card mb-1">
+                           
+                           <div class="col-sm">
+                              <div class="d-flex justify-content-sm-end">
+                                
+                                 <div class="search-box ms-2">
+                                   
+                                       <input class="form-control" type="search" name="search" placeholder="Search..." 
+                                          hx-get="{% url 'lead_inprocess' %}" 
+                                          hx-trigger="input changed delay:500ms, search" 
+                                          hx-target="#inprocesssearch-results" 
+                                          hx-indicator=".htmx-indicator">
+
+                                   
+                                    <i class="ri-search-line search-icon"></i>
+                                 </div>
+                              </div>
+                           </div>
+                            
+                           <div class="table-responsive table-card mb-1 mt-2">
                                 <table class="table table-nowrap align-middle" id="orderTable">
                                    <thead class="text-muted table-light">
                                       <tr class="text-uppercase">
@@ -481,7 +499,7 @@
                                        <th>ACTION</th>
                                       </tr>
                                    </thead>
-                                   <tbody class="list form-check-all"  hx-get="{% url "lead_inprocess" %}" hx-trigger="load, movieListChanged from:body" hx-target="this" id="search-results">
+                                   <tbody class="list form-check-all"  hx-get="{% url "lead_inprocess" %}" hx-trigger="load, movieListChanged from:body" hx-target="this" id="inprocesssearch-results">
                                       <tr>
                                           <td>
                                              <button type="button" class="btn btn-outline-warning btn-load">
@@ -507,41 +525,58 @@
                                    </div>
                                 </div>
                              </div>
-                             <div class="d-flex justify-content-end">
-                                <div class="pagination-wrap hstack gap-2">
-                                   <a class="page-item pagination-prev disabled" href="#">
-                                   Previous
-                                   </a>
-                                   <ul class="pagination listjs-pagination mb-0"></ul>
-                                   <a class="page-item pagination-next" href="#">
-                                   Next
-                                   </a>
-                                </div>
-                             </div>
+                            
                         </div>
 
                         {% comment %} ------------------------- Appointment --------------- {% endcomment %}
                         <div class="tab-pane" id="lead-Appointment" role="tabpanel">
+                            <div class="col-sm">
+                              <div class="d-flex justify-content-sm-end">
+                                
+                                 <div class="search-box ms-2">
+                                   
+                                       <input class="form-control" type="search" name="search" placeholder="Search..." 
+                                          hx-get="{% url 'lead_appointment' %}" 
+                                          hx-trigger="input changed delay:500ms, search" 
+                                          hx-target="#appointmentsearch-results" 
+                                          hx-indicator=".htmx-indicator">
+
+                                   
+                                    <i class="ri-search-line search-icon"></i>
+                                 </div>
+                              </div>
+                           </div>
                             <div class="table-responsive table-card mb-1">
                                 <table class="table table-nowrap align-middle" id="orderTable">
                                    <thead class="text-muted table-light">
                                       <tr class="text-uppercase">
-                                         <th scope="col" style="width: 25px;">
-                                            <div class="form-check">
-                                               <input class="form-check-input" type="checkbox" id="checkAll" value="option">
-                                            </div>
-                                         </th>
-                                         <th class="sort" data-sort="id">Order ID</th>
-                                         <th class="sort" data-sort="customer_name">Customer</th>
-                                         <th class="sort" data-sort="product_name">Product</th>
-                                         <th class="sort" data-sort="date">Order Date</th>
-                                         <th class="sort" data-sort="amount">Amount</th>
-                                         <th class="sort" data-sort="payment">Payment Method</th>
-                                         <th class="sort" data-sort="status">Delivery Status</th>
-                                         <th class="sort" data-sort="city">Action</th>
+                                         
+                                       <th>SR NO</th>
+                                       <th>ACTION</th>
+                                       <th>ENQUIRY No.</th>
+                                       <th>Name</th>
+                                       <th>DOB</th>
+                                       <th>Passport No</th>
+                                       <th>Registered ON.</th>
+                                       <th>Updated on</th>
+                                       <th>VISA COUNTRY</th>
+                                       <th>VISA Category - SUB CATEGORY</th>
+                                       <th>VISA TYPE</th>
+                                       <th>Package Name</th>
+                                       <th>CREATED BY</th>
+                                       <th>Assigned TO</th>
+                                       <th>Update Assigned To</th>
+                                       
+                                       <th>LEAD status</th>
+                                       <th>Lead Updated</th>
+                                       <th>Appointment</th>
+                                       <th>Appointment Status</th>
+                                       <th>NOTES</th>
+                                       <th>Colour Code</th>
+                                       <th>ACTION</th>
                                       </tr>
                                    </thead>
-                                   <tbody class="list form-check-all"  hx-get="{% url "lead_appointment" %}" hx-trigger="load, movieListChanged from:body" hx-target="this" id="search-results">
+                                   <tbody class="list form-check-all"  hx-get="{% url "lead_appointment" %}" hx-trigger="load, movieListChanged from:body" hx-target="this" id="appointmentsearch-results">
                                       <tr>
                                           <td>
                                              <button type="button" class="btn btn-outline-warning btn-load">
