show all data lead wise

--- a/crm_app/templates/crm/Leads/enquiry/view_assign_users_modal.html
+++ b/crm_app/templates/crm/Leads/enquiry/view_assign_users_modal.html
@@ -1,6 +1,6 @@
 {% load custom_filters %}
 
-<div id="zoomInModal-{{i.assign_to_employee.id}}" class="modal fade zoomIn" tabindex="-1" aria-labelledby="zoomInModalLabel" aria-hidden="true" style="display: none;">
+<div id="zoomInModall-{{i.assign_to_employee.id}}" class="modal fade zoomIn" tabindex="-1" aria-labelledby="zoomInModalLabel" aria-hidden="true" style="display: none;">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
