--- a/crm_app/templates/crm/base/header.html
+++ b/crm_app/templates/crm/base/header.html
@@ -140,11 +140,11 @@
                </div>
             </div>
             <div class="dropdown ms-1 topbar-head-dropdown header-item">
-               <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle"
+               {% comment %} <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle"
                   data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                <img id="header-lang-img" src="{% static "assets/images/flags/us.svg" %}" alt="Header Language"
                height="20" class="rounded">
-               </button>
+               </button> {% endcomment %}
                <div class="dropdown-menu dropdown-menu-end">
                   <!-- item-->
                   <a href="javascript:void(0);" class="dropdown-item notify-item language py-2"
