--- a/crm_app/templates/crm/base/header.html
+++ b/crm_app/templates/crm/base/header.html
@@ -32,7 +32,7 @@
             </span>
             </button>
             <!-- App Search-->
-            <form class="app-search d-none d-md-block">
+            {% comment %} <form class="app-search d-none d-md-block">
                <div class="position-relative">
                   <input type="text" class="form-control" placeholder="Search..." autocomplete="off"
                      id="search-options" value="">
@@ -116,7 +116,7 @@
                      <i class="ri-arrow-right-line ms-1"></i></a>
                   </div>
                </div>
-            </form>
+            </form> {% endcomment %}
          </div>
          <div class="d-flex align-items-center">
             <div class="dropdown d-md-none topbar-head-dropdown header-item">
@@ -203,7 +203,7 @@
                   </a>
                </div>
             </div>
-            <div class="dropdown topbar-head-dropdown ms-1 header-item">
+            {% comment %} <div class="dropdown topbar-head-dropdown ms-1 header-item">
                <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle"
                   data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                <i class='bx bx-category-alt fs-22'></i>
@@ -263,8 +263,8 @@
                      </div>
                   </div>
                </div>
-            </div>
-            <div class="dropdown topbar-head-dropdown ms-1 header-item">
+            </div> {% endcomment %}
+            {% comment %} <div class="dropdown topbar-head-dropdown ms-1 header-item">
                <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle"
                   id="page-header-cart-dropdown" data-bs-toggle="dropdown" data-bs-auto-close="outside"
                   aria-haspopup="true" aria-expanded="false">
@@ -436,7 +436,7 @@
                      </a>
                   </div>
                </div>
-            </div>
+            </div> {% endcomment %}
             <div class="ms-1 header-item d-none d-sm-flex">
                <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle"
                   data-toggle="fullscreen">
@@ -449,7 +449,7 @@
                <i class='bx bx-moon fs-22'></i>
                </button>
             </div>
-            <div class="dropdown topbar-head-dropdown ms-1 header-item" id="notificationDropdown">
+            {% comment %} <div class="dropdown topbar-head-dropdown ms-1 header-item" id="notificationDropdown">
                <button type="button" class="btn btn-icon btn-topbar btn-ghost-secondary rounded-circle"
                   id="page-header-notifications-dropdown" data-bs-toggle="dropdown"
                   data-bs-auto-close="outside" aria-haspopup="true" aria-expanded="false">
@@ -759,7 +759,7 @@
                      </div>
                   </div>
                </div>
-            </div>
+            </div> {% endcomment %}
             <div class="dropdown ms-sm-3 header-item topbar-user">
                <button type="button" class="btn" id="page-header-user-dropdown" data-bs-toggle="dropdown"
                   aria-haspopup="true" aria-expanded="false">
@@ -779,7 +779,7 @@
                   <a class="dropdown-item" href="{% url "profile" %}"><i
                      class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i> <span
                      class="align-middle">Profile</span></a>
-                  <a class="dropdown-item" href="apps-chat.html"><i
+                  {% comment %} <a class="dropdown-item" href="apps-chat.html"><i
                      class="mdi mdi-message-text-outline text-muted fs-16 align-middle me-1"></i>
                   <span class="align-middle">Messages</span></a>
                   <a class="dropdown-item" href="apps-tasks-kanban.html"><i
@@ -787,15 +787,15 @@
                   <span class="align-middle">Taskboard</span></a>
                   <a class="dropdown-item" href="{% url "help_emp" %}"><i
                      class="mdi mdi-lifebuoy text-muted fs-16 align-middle me-1"></i> <span
-                     class="align-middle">Help</span></a>
+                     class="align-middle">Help</span></a> {% endcomment %}
                   <div class="dropdown-divider"></div>
                   {% comment %} <a class="dropdown-item" href="pages-profile.html"><i
                      class="mdi mdi-wallet text-muted fs-16 align-middle me-1"></i> <span
                      class="align-middle">Balance : <b>$5971.67</b></span></a> {% endcomment %}
-                  <a class="dropdown-item" href="{% url "profile_setting" %}"><span
+                  {% comment %} <a class="dropdown-item" href="{% url "profile_setting" %}"><span
                      class="badge bg-success-subtle text-success mt-1 float-end">New</span><i
                      class="mdi mdi-cog-outline text-muted fs-16 align-middle me-1"></i> <span
-                     class="align-middle">Settings</span></a>
+                     class="align-middle">Settings</span></a> {% endcomment %}
                   {% comment %} <a class="dropdown-item" href="auth-lockscreen-basic.html"><i
                      class="mdi mdi-lock text-muted fs-16 align-middle me-1"></i> <span
                      class="align-middle">Lock screen</span></a> {% endcomment %}
