--- a/crm_app/templates/crm/profile_setting.html
+++ b/crm_app/templates/crm/profile_setting.html
@@ -44,8 +44,8 @@
                                     </label>
                                 </div>
                             </div>
-                            <h5 class="fs-16 mb-1">Anna Adame</h5>
-                            <p class="text-muted mb-0">Lead Designer / Developer</p>
+                            <h5 class="fs-16 mb-1">{{user}}</h5>
+                            <p class="text-muted mb-0">Admin</p>
                         </div>
                     </div>
                 </div>
@@ -174,12 +174,13 @@
                                         <!--end col-->
                                         <div class="col-lg-6">
                                             <div class="mb-3">
+                                                
                                                 <label for="phonenumberInput" class="form-label">Phone
                                                     Number</label>
                                                 <input type="text" class="form-control"
                                                     id="phonenumberInput"
                                                     placeholder="Enter your phone number"
-                                                    value="+(1) 987 6543">
+                                                    value=" {% if user_type == "Admin" %}{{ user.admin.contact_no }}{% elif user_type == "Employee" %}{{ user.employee.contact_no }} {% elif user_type == "Agent" %}{{ user.agent.contact_no }} {% elif user_type == "Out Sourcing Agent" %}{{ user.outsourcingagent.contact_no }}{% endif %} ">
                                             </div>
                                         </div>
                                         <!--end col-->
