--- a/crm_app/templates/crm/base/header.html
+++ b/crm_app/templates/crm/base/header.html
@@ -769,8 +769,8 @@
                <span class="text-start ms-xl-2">
                <span class="d-none d-xl-inline-block ms-1 fw-semibold user-name-text">{{request.user.first_name}}
                {{request.user.last_name}}</span>
-               <span class="d-none d-xl-block ms-1 fs-12 user-name-sub-text">Founder</span>
-               </span>
+               {% comment %} <span class="d-none d-xl-block ms-1 fs-12 user-name-sub-text">Founder</span>
+               </span> {% endcomment %}
                </span>
                </button>
                <div class="dropdown-menu dropdown-menu-end">
