--- a/crm_app/templates/crm/login.html
+++ b/crm_app/templates/crm/login.html
@@ -2,6 +2,16 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
+<style>
+    .g-recaptcha {
+        display: flex;
+        justify-content: center; /* Center the reCAPTCHA */
+        width: 100%; /* Make it take full width */
+        transform: scale(1); /* Adjust the scale as needed */
+        transform-origin: center; /* Keep it centered while scaling */
+    }
+</style>
+
 <html lang="en" data-layout="vertical" data-topbar="light" data-sidebar="dark" data-sidebar-size="lg" data-sidebar-image="none" data-bs-theme="dark" data-body-image="img-1" data-preloader="disable">
 <head>
     <meta charset="utf-8" />
@@ -88,19 +98,11 @@
                                                     {{fm.label_tag}} {{fm}} <small class='text-danger'>{{fm.errors|striptags}}</small><br>
                                                 </div>
                                                 {% endfor %}
+                                                
                                                 <div class="float-end">
                                                     <a href="auth-pass-reset-cover.html" class="text-muted">Forgot password?</a>
                                                 </div>
-                                                {% comment %} <div class="mb-3">
-                                                    <div class="float-end">
-                                                        <a href="auth-pass-reset-cover.html" class="text-muted">Forgot password?</a>
-                                                    </div>
-                                                    <label class="form-label" for="password-input">Password</label>
-                                                    <div class="position-relative auth-pass-inputgroup mb-3">
-                                                        <input type="password" class="form-control pe-5 password-input" placeholder="Enter password" id="password-input" name="password" required>
-                                                        <button class="btn btn-link position-absolute end-0 top-0 text-decoration-none text-muted password-addon" type="button" id="password-addon"><i class="ri-eye-fill align-middle"></i></button>
-                                                    </div>
-                                                </div> {% endcomment %}
+                                                
                                                 <div class="mt-4">
                                                     <button class="btn btn-primary w-100" type="submit">Sign In</button>
                                                 </div>
