--- a/crm_app/templates/crm/base/header.html
+++ b/crm_app/templates/crm/base/header.html
@@ -1,4 +1,5 @@
 {% load static %}
+<script src="https://sdk.cashfree.com/js/ui/2.0.0/cashfree-ui.js"></script>
 <header id="page-topbar">
    <div class="layout-width">
       <div class="navbar-header">
@@ -779,6 +780,9 @@
                   <a class="dropdown-item" href="{% url "profile" %}"><i
                      class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i> <span
                      class="align-middle">Profile</span></a>
+                  <a class="dropdown-item" href="#" id="rechargeBtn"><i
+                     class="mdi mdi-account-circle text-muted fs-16 align-middle me-1"></i> <span
+                     class="align-middle">Recharge</span></a>
                   {% comment %} <a class="dropdown-item" href="apps-chat.html"><i
                      class="mdi mdi-message-text-outline text-muted fs-16 align-middle me-1"></i>
                   <span class="align-middle">Messages</span></a>
@@ -812,3 +816,29 @@
       </div>
    </div>
 </header>
+
+<script>
+   const cashfree = Cashfree({ mode: "sandbox" });
+
+   document.getElementById("rechargeBtn").addEventListener("click", function (e) {
+       e.preventDefault();
+
+       fetch("{% url 'generate_cashfree_token' %}", {
+           method: "POST",
+           headers: {
+               "X-CSRFToken": "{{ csrf_token }}",
+           },
+       })
+       .then(res => res.json())
+       .then(data => {
+           if (data.payment_session_id) {
+               cashfree.checkout({
+                   paymentSessionId: data.payment_session_id,
+                   redirectTarget: "_self"
+               });
+           } else {
+               alert("Error: " + (data.error || "Unable to get session ID"));
+           }
+       });
+   });
+</script>
