--- a/crm_app/templates/crm/base/base.html
+++ b/crm_app/templates/crm/base/base.html
@@ -42,6 +42,7 @@
       <link href="{% static "assets/css/custom.min.css" %}" rel="stylesheet" type="text/css">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+      <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script>
    </head>
    <body>
       <!-- Begin page -->
@@ -204,5 +205,18 @@
 
     {% load sweetify %}
     {% sweetify %}
+    <script>
+      const cashfree = Cashfree({
+          mode: "sandbox",
+      });
+      document.getElementById("rechargeBtn").addEventListener("click", () => {
+         console.log("workinggg")
+          let checkoutOptions = {
+              paymentSessionId: "session_va855fOWHCdMThIuEAbC8Ijr_82z3Sjdz_tzQYMUNDghVqu4Uugt_LRU8zelYZh5oHOz6eePi9smUG",
+              redirectTarget: "_self",
+          };
+          cashfree.checkout(checkoutOptions);
+      });
+  </script>
    </body>
 </html>
