--- a/crm_app/templates/crm/base/dashboard.html
+++ b/crm_app/templates/crm/base/dashboard.html
@@ -556,6 +556,33 @@
                         </div>
                         <!-- end card body -->
                      </div>
+                     <div class="card card-animate">
+                        <div class="card-body">
+                           <div class="d-flex align-items-center">
+                              <div class="flex-grow-1 overflow-hidden">
+                                 <p
+                                    class="text-uppercase fw-medium text-muted text-truncate mb-0">
+                                    Wallet
+                                 </p>
+                              </div>
+                              <div class="flex-shrink-0">
+                                 <h5 class="text-danger fs-14 mb-0">
+                                    <i class="ri-arrow-right-down-line fs-13 align-middle"></i>
+                                    Rs 100
+                                 </h5>
+                              </div>
+                           </div>
+                           <div class="d-flex align-items-end justify-content-between mt-4">
+                              <div>
+                                 <h4 class="fs-22 fw-semibold ff-secondary mb-4"><span
+                                    class="counter-value" data-target="100">Rs 100</span></h4>
+                                 {% comment %} <a href="{% url "lead_load" %}" class="text-decoration-underline">View all Leads</a> {% endcomment %}
+                              </div>
+                              
+                           </div>
+                        </div>
+                        <!-- end card body -->
+                     </div>
                      <!-- end card -->
                   </div>
                   <div class="col-lg-4">
