--- a/crm_app/templates/crm/base/navbar.html
+++ b/crm_app/templates/crm/base/navbar.html
@@ -360,6 +360,16 @@
             </li>
             {% endif %}
 
+            {% if request.user.is_authenticated %}
+            {% with request.session.access_token as token %}
+            <li class="nav-item">
+               <a class="nav-link menu-link"  href="https://b2bnw.netlify.app//?token={{ token }}">
+               <i class="ri-pencil-ruler-2-line"></i> <span data-key="t-widgets">B2B</span>
+               </a>
+            </li>
+            {% endwith %}
+            {% endif %}
+
          
          </ul>
       </div>
