add recharge history

--- a/crm_app/templates/crm/base/header.html
+++ b/crm_app/templates/crm/base/header.html
@@ -805,7 +805,7 @@
                      class="align-middle">Lock screen</span></a> {% endcomment %}
                   <a class="dropdown-item" href="#" onclick="event.preventDefault(); document.getElementById('logout-form').submit();"><i
                      class="mdi mdi-logout text-muted fs-16 align-middle me-1"></i> <span
-                     class="align-middle">Logoutttt</span></a>
+                     class="align-middle">Logout</span></a>
                      <form action="{% url "logout" %}"  method="POST" id="logout-form" style="display: none;">
                      {% csrf_token %}
                      </form>
